# MotionPlanning

./: .gitignore  README.md
controller/install/: local_setup.sh  setup.sh
controller/install/controller_pkg/share/controller_pkg/: package.sh
controller/install/controller_pkg/share/controller_pkg/cmake/: controller_pkgConfig.cmake
controller/log/: latest_build
controller/src/controller_pkg/: CMakeLists.txt  package.xml
controller/src/controller_pkg/src/: controller.cpp  tester.cpp
controllers/c2/: c2  omni_wheels.c
controllers/c3/: c3
controllers/c4/: c4
controllers/o1/: output.txt  output1.txt
controllers/o1/include/: Motion.hpp  PathPlanner.hpp  Robot.hpp
controllers/o1/src/: CMakeCache.txt  Makefile  Motion.cpp  Robot.cpp  Visualize.cpp  cmake_install.cmake  main.cpp
controllers/omniwheel_supervisor/: CMakeLists.txt  Coordinate.hpp  Kinematik.cpp  Kinematik.h  Motion.cpp  Motion.h  Motion.hpp  PathPlanner.hpp  Robot.hpp  Visualize.cpp  Visualize.hpp  def.h  main.cpp  omni_robot_test.cpp  omniwheel_supervisor  output.txt  output1.txt  smooth.py
demo_data_publisher/src/publisher_package/: CMakeLists.txt  package.xml
demo_data_publisher/src/publisher_package/src/: publisher.cpp  subscriber.cpp
msg_aggregator/src/msg_aggregator/: CMakeLists.txt  package.xml
msg_aggregator/src/msg_aggregator/src/: multi_array_aggregator.cpp
path_planner/install/: local_setup.sh  setup.sh
path_planner/install/path_planner_pkg/share/path_planner_pkg/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
path_planner/install/path_planner_pkg/share/path_planner_pkg/cmake/: path_planner_pkgConfig.cmake
path_planner/log/: latest_build
path_planner/src/path_planner_pkg/: CMakeLists.txt  package.xml
path_planner/src/path_planner_pkg/include/: PathPlanner.hpp
path_planner/src/path_planner_pkg/src/: Visualize.cpp  main.cpp  script.py
protos/: BluePlayer.proto  OrangePlayer.proto
python_sim/src/python_sim_pkg/: package.xml  setup.cfg  setup.py
python_sim/src/python_sim_pkg/python_sim_pkg/: robot_sim.py
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/subscriber_package/share/ament_index/resource_index/parent_prefix_path/: subscriber_package
ros_ws/install/subscriber_package/share/subscriber_package/: local_setup.sh  package.sh
ros_ws/log/: latest_build
ros_ws/src/subscriber_package/: CMakeLists.txt
ros_ws/src/subscriber_package/include/: PathPlanner.hpp
ros_ws/src/subscriber_package/src/: Visualize.cpp  main.cpp
stm_comm/: serial_comm.py
webots_sim/install/: local_setup.sh  setup.sh
webots_sim/install/webots_pkg/share/webots_pkg/: local_setup.dsv  local_setup.sh  my_robot_driver.xml  package.bash  package.dsv  package.ps1  package.sh  package.zsh
webots_sim/install/webots_pkg/share/webots_pkg/cmake/: ament_cmake_export_libraries-extras.cmake
webots_sim/install/webots_pkg/share/webots_pkg/resource/: ball.urdf  my_robot_O2.urdf  my_robot_O5.urdf
webots_sim/install/webots_pkg/share/webots_pkg/worlds/: .RoboCupMSL.wbproj  BluePlayer.proto  sphereball.proto
webots_sim/log/: latest_build
webots_sim/src/webots_pkg/: CMakeLists.txt  package.xml
webots_sim/src/webots_pkg/include/my_package/: MyRobotDriver_B1.hpp  MyRobotDriver_B2.hpp  MyRobotDriver_B3.hpp  MyRobotDriver_B4.hpp  MyRobotDriver_B5.hpp  MyRobotDriver_O1.hpp  MyRobotDriver_O2.hpp  MyRobotDriver_O3.hpp  MyRobotDriver_O4.hpp  MyRobotDriver_O5.hpp  ball_driver.hpp
webots_sim/src/webots_pkg/launch/: robot_launch.py
webots_sim/src/webots_pkg/resource/: my_robot_B1.urdf  my_robot_B2.urdf  my_robot_B3.urdf  my_robot_B4.urdf  my_robot_B5.urdf  my_robot_O1.urdf  my_robot_O3.urdf  my_robot_O4.urdf
webots_sim/src/webots_pkg/src/: MyRobotDriver_B1.cpp  MyRobotDriver_B2.cpp  MyRobotDriver_B3.cpp  MyRobotDriver_B4.cpp  MyRobotDriver_B5.cpp  MyRobotDriver_O1.cpp  MyRobotDriver_O2.cpp  MyRobotDriver_O3.cpp  MyRobotDriver_O4.cpp  MyRobotDriver_O5.cpp  ball_driver.cpp
webots_sim/src/webots_pkg/worlds/: OrangePlayer.proto  RoboCupMSL.wbt
worlds/: .RoboCupMSL.wbproj  RoboCupMSL.wbt
